syntax = "proto3";

package rivet.backend.pkg.upload.msg.delete;

import "resources/legacy/proto/common.proto";

/// name = "msg-upload-delete"
/// parameters = [
/// 	{ name = "request_id" },
/// ]
message Message {
	rivet.common.Uuid request_id = 1;
	repeated rivet.common.Uuid upload_ids = 2;
}
